[tool.poetry]
name = "revisit"
version = "0.1.0"
description = ""
authors = ["Tristan Slater <hello@trslater.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
